--- a/smart india hackathon/index.html
+++ b/smart india hackathon/index.html
@@ -331,8 +331,8 @@ Author URL: http://w3layouts.com
                   <h6 class="footer-title-29">Contact Us</h6>
                   <ul>
                       <li><p><span class="fa fa-map-marker"></span> SRKR ENGINEERING COLLEGE (A) - BHIMAVARAM - 534204 </p></li>
-                      <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(91)-970-519-8826</a></li>
-                      <li><a href="mailto:corporate-mail@support.com" class="mail"><span class="fa fa-envelope-open-o"></span> shaikhameedazeez@gmail.com</a></li>
+                      <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(91)-995-913-2169</a></li>
+                      <li><a href="mailto:corporate-mail@support.com" class="mail"><span class="fa fa-envelope-open-o"></span> tarunsaisrinivas@gmail.com</a></li>
                   </ul>
                   <div class="main-social-footer-29">
                       <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
